Fix bugs on url

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
 theme = "blowfish" # UNCOMMENT THIS LINE
-baseURL = "https://himeno-sun-lan.github.io/Kiban"
+baseURL = "https://himeno-sun-lab.github.io/Kiban"
 defaultContentLanguage = "en"
 defaultContentInSubdir = false
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
